2005-06-16 Vladimir Hirsl
	Fix for PR 99433: [Search]  Return parms not part of qualification matching
	Function/methos parameters are now used as a part of search pattern.
	Note: return parameters are NOT used as a part of search pattern. The PR title
	is somewhat missleading.
	
	* index/org/eclipse/cdt/internal/core/index/ctagsindexer/CTagEntry.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/CGenerateIndexVisitor.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/CPPGenerateIndexVisitor.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/IndexEncoderUtil.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/IndexVisitorUtil.java
	* search/org/eclipse/cdt/core/search/BasicSearchMatch.java
	* search/org/eclipse/cdt/core/search/DOMSearchUtil.java
	* search/org/eclipse/cdt/internal/core/search/matching/CSearchPattern.java
	* search/org/eclipse/cdt/internal/core/search/matching/MethodDeclarationPattern.java
			
2005-06-14 David Inglis
	
	Support for older cygpaths - bug # 94702
	
	* utils/org/eclipse/cdt/utils/CygPath.java
	
2005-06-08 Alain Magloire
	Attempt to fix PR 97554
	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java

2005-06-08 Alain Magloire
	Move to the IContentTypeManager framework: PR 86645
	* index/org/eclipse/cdt/internal/core/index/sourceindexer/AbstractIndexer.java
	* index/org/eclipse/cdt/internal/core/index/sourceindexer/AddFileToIndex.java
	* index/org/eclipse/cdt/internal/core/index/sourceindexer/AddFolderToIndex.java
	* index/org/eclipse/cdt/internal/core/index/sourceindexer/SourceIndexerRequestor.java
	
	* model/org/eclipse/cdt/core/model/CoreModel.java
	* model/org/eclipse/cdt/core/model/ITranslationUnit.java

	* model/org/eclipse/cdt/internal/core/model/CContainer.java
	* model/org/eclipse/cdt/internal/core/model/CModelManager.java
	+ model/org/eclipse/cdt/internal/core/model/ContentTypeProcessor.java